# stocking

api/: .cursorrules  .gitignore  DATABASE.md  Dockerfile  README.md  alembic.ini  build_docker.sh  create_tables.py  db_manager.py  deploy-api-ecs.sh  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  request.http  start_services.sh  stop_services.sh  test_dynamic_subscription.py  toss_ws_relayer.py  websocket_daemon.py
api/alembic/: env.py
api/alembic/versions/: 04cee77d7cfe_add_transaction_models.py  0bbb617f58e3_portfolio_단순화.py  0e6321424c47_remove_transaction_stats_from_virtual_.py  409e0668d264_remove_stock_relationships_and_change_.py  48ab17309e7a_portfolio_와_order_를_1_n_관계로_설정.py  4aa95e87f643_watch_list_directory.py  4e3c8d5b3b5a_portfolio_와_virtual_balance_에서_확정값만_db_.py  4f7473bdd1af_move_realized_profit_loss_from_order_to_.py  536869bfd17a_portfolio_order_환율.py  5afaaf6b437f_rename_stock_id_to_product_code_in_.py  5d3600b86857_portfolio에서_실현손익_컬럼_제거.py  (+15 more)
api/tests/: TRADING_TESTS_SUMMARY.md  kis_ws_client.py  test_order_flow.py  test_trading_complete_flow.py  test_trading_edge_cases.py  test_trading_with_fees_and_stats.py  toss_ws_client_stomp.py  ws_client.py
api/upbit/: analyze_crix_prefix.py  crix.proto  crix_pb2.py  javascript_style_parser.py  upbit_packet.js  working_websocket_client.py
toss_ws_proxy/: README.md  config.env.example  main.py  pyproject.toml
toss_ws_proxy/examples/: simple_usage.py
toss_ws_proxy/src/: config.py  health_monitor.py  models.py  proxy_service.py  subscription_manager.py  toss_client.py  worker_handler.py
(+142 files in other folders)
