[project]
name = "toss-ws-proxy"
version = "0.1.0"
description = "Toss WebSocket Proxy Service with auto-reconnection and subscription management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0"
]
